v2.0.0 — full architecture modernisation
Architecture
- Split GameManager (1356 → 1237 lines) into 6 focused classes:
  SpawnManager, TeamManager, GameAnnouncer, GameTimerManager,
  GameStateManager, BossBarManager
- Eliminated all post-construction setter injection. Constructor
  injection everywhere; circular deps resolved via Supplier<X>
- ServiceRegistry-style wiring in VampireZPlugin.onEnable

Commands & GUI
- Migrated /vz to cloud-command-framework (28 subcommands routed via
  Cloud builder; tab-completion + permission gates baked in)
- Migrated all 4 GUIs (PerkShopGUI, PerkSelectionGUI, PerkTestGUI,
  LeaderboardGUI) to triumph-gui — removed string-title routing,
  magic slot numbers, and InventoryClickEvent handlers
- Added top-screen boss bar showing time / day-night phase / team
  counts during active games (Adventure native BossBar)

Persistence
- New SQLite + HikariCP backing for player stats (replaces YAML)
- Async write-through, batched UPSERT, WAL journal mode
- One-time auto-migration of legacy player-stats.yml on first boot

Configuration
- ConfigLib typed PluginConfig POJO with kebab-case auto-mapping
- All hardcoded timings (combat tag, blood compass, free perk
  milestones, vampire leap cooldown) moved to config.yml

Text & logging
- Adventure / MiniMessage migration across 79 perk classes + every
  manager and GUI; ChatColor only retained where FastBoard requires
- SLF4J per-class loggers in 6 manager classes (class-name prefixes
  for easier log filtering)

Tests
- Added TeamManagerTest, GameStateManagerTest, GameTimerManagerTest
  (24 new unit tests; total now 81 passing)

Perks
- Registered AnkhOfRebirthPerk (was implemented but never wired up)
- Disambiguated display names: Escape Plan (Weak/Strong),
  Lucky Roll (Silver/Gold/Prismatic)
- More thematic icons: Fire Aspect → BLAZE_POWDER,
  Flame Arrows → SPECTRAL_ARROW

Performance
- Blood-compass updater: pre-fetch online humans once per tick;
  early-exit per vampire if no compass in invent